...
    <string name="title_popular_movies">POPULAR</string>
    <string name="title_now_playing_movies">NOW PLAYING</string>
    <string name="title_top_rated_movies">TOP RATED</string>
    <string name="title_upcoming_movies">UPCOMING</string>
    <string name="title_recommended_movies">RECOMMENDATIONS</string>
    <string name="title_similar_movies">SIMILAR</string>
    <string name="biometric_auth_title">Login</string>
    <string name="biometric_auth_subtitle">Please login using fingerprint reader</string>
    <string name="biometric_use_password_instead">Login with password</string>
    <string name="biometric_auth_failed">Try again!</string>
    <string name="permission_rationale_message">The location permission was denied, this permission is required, you should consider granting it.</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="page_image_description">Page Image</string>
...
    <string name="btn_login">Login</string>
    <string name="btn_login_as_guest">Login as Guest</string>
    <string name="btn_launch_biometrics">Login with fingerprint</string>
    <string name="btn_dismiss_message">Press to dismiss</string>
    <string name="error_dialog_title">Something went wrong</string>
    <string name="title_cast_row">CAST</string>
    <string name="title_overview">Overview</string>
    <string name="user_score_label">User\nscore</string>
    <string name="label_username">USERNAME</string>
    <string name="label_password">PASSWORD</string>
    <string name="bioprompt_title">Autenticación biométrica</string>
    <string name="bioprompt_subtitle">Confirma tu identidad para continuar</string>
    <string name="logo_content_description">Logo</string>
...
